--- a/project/index.html
+++ b/project/index.html
@@ -105,7 +105,7 @@
 				<img src="img/mac.jpg" class="flexible-image text-center mt-5" alt="mac" >
 			</div>
 			<div class="col-md-6">
-				<h2 class="h2 text-center mb-3 mt-5" >some words about&nbspme</h2>
+				<h2 class="h2 text-center mb-3 mt-5" >some words about&nbspй  me</h2>
 					<p >I am a young guy who is now studying at the university, and wants to learn how to make websites in the field of frontend. But I am interested in everything, from the design and structure of the site to the databases and traffic transmission. In the future, I want to master the entire process of building a site. After my plans I want to go and see the world, visit different countries, do many beautiful photos and share them with my friends, on my blog and instagram. Tell about your impressions from each place where you visited and just live happily !!!</p>
 				<ul class="">
 					<li><i class="far fa-dot-circle mr-2"></i>Mission - Learn to make websites and make money on it. </li>
@@ -199,7 +199,9 @@
 </div>
 	<section class="contact-with-me">
 		<div class="contact">
-			<h2 class="text-center pt-5"> Contact with me</h2>
+			<div class="contact-text">
+				<h2 class="text-center pt-5"> Contact with me</h2>
+			</div>
 		</div>
 		<div class="info">
 			<p class="text-justify p-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam tenetur quae modi sapiente possimus, quaerat rerum tempora eaque cum iure laudantium totam delectus, omnis rem? Quidem ducimus tenetur obcaecati tempore. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid repellat beatae libero optio commodi quasi accusamus, rem, voluptatem consequuntur atque.</p>
