--- a/project/index.html
+++ b/project/index.html
@@ -94,7 +94,7 @@
 
 	<section>
 		<div class="preview">
-			<h2 class="text-center">Welcome to <span class="text-warning">my blog</span></h2>
+			<h2 class="text-center">Welcome&nbspto <span class="text-warning">my&nbspblog</span></h2>
 			<p class="text-center">Here I talk myself and my life</p>
 		</div>
 	</section>
@@ -105,7 +105,7 @@
 				<img src="img/mac.jpg" class="flexible-image text-center mt-5" alt="mac" >
 			</div>
 			<div class="col-md-6">
-				<h2 class="h2 text-center mb-3 mt-5" >some words about&nbsp  me</h2>
+				<h2 class="h2 text-center mb-3 mt-5" >some&nbspwords about&nbspme</h2>
 					<p >I am a young guy who is now studying at the university, and wants to learn how to make websites in the field of frontend. But I am interested in everything, from the design and structure of the site to the databases and traffic transmission. In the future, I want to master the entire process of building a site. After my plans I want to go and see the world, visit different countries, do many beautiful photos and share them with my friends, on my blog and instagram. Tell about your impressions from each place where you visited and just live happily !!!</p>
 				<ul class="">
 					<li><i class="far fa-dot-circle mr-2"></i>Mission - Learn to make websites and make money on it. </li>
@@ -200,7 +200,7 @@
 	<section class="contact-with-me">
 		<div class="contact">
 			<div class="contact-text">
-				<h2 class="text-center pt-5"> Contact with me</h2>
+				<h2 class="text-center pt-5"> Contact with&nbspme</h2>
 			</div>
 		</div>
 		<div class="info">
