--- a/project/CV boostrap/index.html
+++ b/project/CV boostrap/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Material Design Bootstrap</title>
+  <link rel="icon" href="img/Blogger.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
   <!-- Bootstrap core CSS -->
@@ -22,8 +24,8 @@
       <div class="col-md-5 font-weight-normal">
        <div class="box-1 text-center mt-5 ">
           <img class="rounded-circle mb-3 " src="img/pic.jpg" alt="logo" width="200px" height="200px">
-            <h1 class="font-weight-normal mb-3">Unknown Fesha</h1>
-              <h3 class="mb-3">FrondEnd Developer</h3>
+            <h1 class="font-weight-normal mb-3">Vladyslav&nbsp Feshchenko</h1>
+              <h3 class="mb-3">Junior FrondEnd Developer</h3>
         </div>
         <div class="box-2">
           <h2 class="font-weight-bold mb-3"> <img class="mr-2" src="img/ob.png" alt="Objecive">Object</h2>
