--- a/project/index.html
+++ b/project/index.html
@@ -247,9 +247,9 @@
 
 		  <!-- Copyright -->
 		  <div class="footer-copyright text-center py-3">
-		    <a href="https://www.facebook.com/usernamekek"><i class="fab fa-facebook"></i></a>
-		    <a href="https://www.instagram.com/vlad_fesha/"><i class="fab fa-instagram"></i></a>
-		    <a href="https://vk.com/vlad_fesha"><i class="fab fa-vk"></i></a>
+		    <a href="https://www.facebook.com/usernamekek" target="_blank"><i class="fab fa-facebook"></i></a>
+		    <a href="https://www.instagram.com/vlad_fesha/" target="_blank"><i class="fab fa-instagram"></i></a>
+		    <a href="https://vk.com/vlad_fesha" target="_blank"><i class="fab fa-vk"></i></a>
 		  </div>
 		  <!-- Copyright -->
 
